--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/RichTextToolbar.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/RichTextToolbar.mxml
@@ -57,7 +57,8 @@
             var attributeVO : AttributeVO = new AttributeVO( "value", "%тамnfb%3#" );
 
             attributeVO.value = StringUtils.spaceToNbsp( activeEditor.getContent() );
-            vdomObjectAttributesVO.attributes = [ attributeVO ];
+            vdomObjectAttributesVO.attributes = new Vector.<AttributeVO>();
+			vdomObjectAttributesVO.attributes.push( attributeVO );
 
             return vdomObjectAttributesVO;
         }
