--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
@@ -271,7 +271,7 @@
 			 top="29"/>
 
 	<mx:Image id="spinner"
-			  source="@Embed('/assets/spinner.swf')"
+			  source="{VDOMImage.Spinner}"
 			  right="10"
 			  top="30"
 			  height="30"
