--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
@@ -18,16 +18,11 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.core.UIComponent;
-
+			
+			import net.vdombox.ide.common.model._vo.AttributeVO;
 			import net.vdombox.ide.modules.wysiwyg.events.ColorPickerEvent;
 			import net.vdombox.ide.modules.wysiwyg.view.components.windows.ColorPickerWindow;
 			import net.vdombox.utils.WindowManager;
-
-			[Bindable]
-			private var _color : String = "0";
-
-			[Bindable]
-			private var _colorInNumber : uint = 0;
 
 			private var colorPicker : ColorPicker;
 
@@ -37,32 +32,32 @@
 			{
 				buttonMode = true;
 			}
-
-			[Bindable( event = "valueCommit" )]
-			public function get value() : String
+			
+			private var _attributeVO : AttributeVO;
+			
+			[Bindable]
+			public function get attributeVO():AttributeVO
 			{
-				return _color;
+				return _attributeVO;
+			}
+			
+			public function set attributeVO(value:AttributeVO):void
+			{
+				_attributeVO = value;
 			}
 
-			public function set value( colorValue : String ) : void
+			public function get value() : String
 			{
-				rectColorPicker.visible = colorValue != "";
-				rectEmptyColor.visible = colorValue == "";
-
-				var newColor : uint = uint( ( colorValue == "" ) ? "0" : "0x" + colorValue )
-				_color = colorValue;
-				_colorInNumber = newColor;
-
-				dispatchEvent( new Event( "valueCommit" ) );
+				return _attributeVO.value;
 			}
 
 			public function mouseClickandler( event : MouseEvent ) : void
 			{
 				colorPickerWindow = new ColorPickerWindow();
 
-				colorPickerWindow.colorValue = colorPickerWindow.oldColorValue = _color;
+				colorPickerWindow.colorValue = colorPickerWindow.oldColorValue = _attributeVO.value;
 
-				var colorInNumber : uint = uint( ( _color == "" ) ? "0" : "0x" + _color );
+				var colorInNumber : uint = uint( ( _attributeVO.value == "" ) ? "0" : "0x" + _attributeVO.value );
 				colorPickerWindow._color = colorPickerWindow.old_color = colorInNumber;
 
 				colorPickerWindow.title = resourceManager.getString( 'Wysiwyg_General', 'color_picker_window_title' );
@@ -72,14 +67,9 @@
 				WindowManager.getInstance().addWindow( colorPickerWindow, UIComponent( UIComponent( parent ).parentApplication ), true );
 			}
 
-			private function change( event : ColorPickerEvent ) : void
-			{
-
-			}
-
 			private function applyHandler( event : ColorPickerEvent ) : void
 			{
-				value = event.hexcolor;
+				_attributeVO.value = event.hexcolor;
 				dispatchEvent( new ColorPickerEvent( ColorPickerEvent.CHANGE, event.color, value ) );
 
 				UIComponent( event.currentTarget ).removeEventListener( ColorPickerEvent.APPLY, applyHandler, false );
@@ -88,13 +78,14 @@
 	</fx:Script>
 	<s:Group width="100%"
 			 height="100%"
-			 toolTip="{_color}">
+			 toolTip="{attributeVO.value}">
 
 		<s:Rect id="rectColorPicker"
 				width="100%"
-				height="100%">
+				height="100%"
+				visible="{attributeVO.value != ''}">
 			<s:fill>
-				<s:SolidColor color="{_colorInNumber}"/>
+				<s:SolidColor color="{uint( ( attributeVO.value == '' ) ? '0' : '0x' + attributeVO.value )}"/>
 			</s:fill>
 		</s:Rect>
 
@@ -103,7 +94,7 @@
 				right="0"
 				top="0"
 				bottom="0"
-				visible="false">
+				visible="{attributeVO.value == ''}">
 			<s:fill>
 				<s:BitmapFill source="@Embed('/assets/empty.png')"
 							  fillMode="repeat"/>
